# morpheus

./: .env.template  .gitignore  CONTRIBUTING.md  FRONTEND.md  LICENSE  ORACLE.md  PROJECT.md  README.md  SETUP.md  SUMMARY.md  TASKS.md  evolution.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
api/: server.py
api/routes/: __init__.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  MindMap.jsx  RunHistory.jsx  SpyReport.jsx
docs/: ARCHITECTURE.md  EVOLUTION.md  FRONTEND_COMP.md  ORACLE.md  PROJECT.md  README.md  SETUP.md  SUMMARY.md  TASKS.md
examples/: malware_sim.py  ml_train.py  safe_script.py  simple.c  simple.js  simple.py  will_crash.py
morpheus/: __main__.py  cli.py  compressor.py  config.py  differ.py  narrator.py  oracle.py  prophecy.py  spy.py  storage.py  teacher.py  tracer.py
morpheus/ml/: __init__.py  anomaly.py  concept_writer.py  degradation.py  execution_graph.py  fingerprint.py  gat_model.py  predictor.py  profiler.py  static_analyzer.py
site/: index.html  package-lock.json  package.json
site/src/: App.jsx  index.css
site/src/components/: CtaSection.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Modes.jsx  Navbar.jsx  OllamaSetup.jsx  QuickStart.jsx
tests/: conftest.py  test_cli.py  test_compressor.py  test_concept_writer.py  test_degradation.py  test_differ.py  test_execution_graph.py  test_gat_model.py  test_integration.py  test_ml.py  test_mock_llm.py  test_narrator.py  test_oracle.py  test_profiler.py  test_prophecy.py  test_spy.py  test_static_analyzer.py  test_storage.py  test_teacher.py  test_tracer.py
